--- a/src/main/resources/lobbyCancelResrv.fxml
+++ b/src/main/resources/lobbyCancelResrv.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mainApp.AdminCancelReservController">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mainApp.AdminCancelReservController">
    <children>
       <BorderPane layoutX="218.0" layoutY="98.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -88,7 +93,7 @@
          <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <AnchorPane layoutX="35.0" layoutY="55.0" prefHeight="280.0" prefWidth="274.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
+                  <AnchorPane layoutX="35.0" layoutY="55.0" prefHeight="231.0" prefWidth="274.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
                      <children>
                         <ChoiceBox fx:id="reservationChoiceBox" layoutX="36.0" layoutY="79.0" prefHeight="26.0" prefWidth="198.0" style="-fx-background-color: #FFFFFF;" />
                         <Label layoutX="59.0" layoutY="27.0" text="Wybierz rezerwację: ">
@@ -96,11 +101,10 @@
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <Button layoutX="15.0" layoutY="220.0" mnemonicParsing="false" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Pobierz rezerwacje" />
-                        <Button layoutX="160.0" layoutY="220.0" mnemonicParsing="false" onAction="#acceptChoice" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Akceptuj wybór" />
+                        <Button layoutX="85.0" layoutY="157.0" mnemonicParsing="false" onAction="#acceptChoice" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Akceptuj wybór" />
                      </children>
                   </AnchorPane>
-                  <Button fx:id="deleteButton" layoutX="128.0" layoutY="375.0" mnemonicParsing="false" onAction="#deleteReservationAdmin" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Usuń rezerwację">
+                  <Button fx:id="deleteButton" layoutX="108.0" layoutY="343.0" mnemonicParsing="false" onAction="#deleteReservationAdmin" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000; -fx-border-radius: 5 5 5 5;" text="Usuń rezerwację">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -112,7 +116,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textFieldRoom" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
+                        <TextField fx:id="textFieldRoom" disable="true" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="333.0" layoutY="320.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
@@ -122,7 +126,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textFieldHour" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
+                        <TextField fx:id="textFieldHour" disable="true" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="543.0" layoutY="225.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
@@ -132,7 +136,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textFieldData" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
+                        <TextField fx:id="textFieldData" disable="true" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="333.0" layoutY="130.0" prefHeight="110.0" prefWidth="170.0" style="-fx-background-color: #84D9F7; -fx-background-radius: 10 10 10 10;">
@@ -142,7 +146,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="textFieldUser" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
+                        <TextField fx:id="textFieldUser" disable="true" editable="false" layoutX="20.0" layoutY="53.0" prefHeight="26.0" prefWidth="130.0" style="-fx-background-color: #FFFFFF;" />
                      </children>
                   </AnchorPane>
                </children>
